# dtypes

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish-testpypi.yml
src/: test.cmd
src/dtypes/: __init__.py  fwd.py  structify.py  typedefs.py  voidy.py
tests/: test_testy.py
