[metadata]
name = dtypes
version = 0.0.1
author = Pierre LeMoine
author_email = pypi@luben.se
description = ctypes but usable
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DrInfiniteExplorer/dtypes
project_urls =
    clickbait = https://bit.ly/3qS8UTo
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src